<resources>
    <string name="app_name">PictureBook</string>
    <string name="a">Ant</string>
    <string name="b">Butterfly</string>
    <string name="c">Cat</string>
    <string name="d">Dog</string>
    <string name="e">Earth</string>
    <string name="f">Fish</string>
    <string name="g">Goat</string>
    <string name="h">Hen</string>
    <string name="i">Ant</string>
    <string name="j">Ant</string>
    <string name="k">Ant</string>
    <string name="l">Ant</string>
    <string name="m">Ant</string>
    <string name="n">Ant</string>
    <string name="o">Ant</string>
</resources>
