<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="polygod.picturebook.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="0">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/a"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/a"
                    />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/b"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="2">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/c"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="1"
                android:layout_column="0">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/d"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/d" />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/e"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/f"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/g"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/g"

                    />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="2"
                android:layout_column="1">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/h"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageView
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:padding="20px"
                    android:src="@drawable/i"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="200px"
                android:layout_height="200px"
                android:padding="20px"
                android:src="@drawable/j"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="200px"
                android:layout_height="200px"
                android:padding="20px"
                android:src="@drawable/k"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="200px"
                android:layout_height="200px"
                android:padding="20px"
                android:src="@drawable/l"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>

    </GridLayout>
</ScrollView>
